# cfms_client

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: desktop-and-mobile-builds.yml
src/: main.py  test.py
src/common/: navigation.py  notifications.py
src/include/: alert.py  constants.py  listener.py  request.py  transfer.py  update.py  upload.py
src/include/controls/: blockuser.py  development.py  emergency.py  path.py  rulemanager.py  welcome.py
src/include/function/: lockdown.py  transfer.py
src/issues_test/: tabs.py
src/pages/: about.py  connect.py  home.py  lockdown.py  login.py  manage.py  settings.py  tasks.py
src/pages/interface/: move.py  passwd.py
