[project]
name = "cfms-client"
version = "0.1.2"
description = "The client of Classified File Management System"
readme = "README.md"
requires-python = ">=3.13.5"
authors = [
    { name = "Creeper19472", email = "creeper19472@crpteam.club" }
]
dependencies = [
  "flet==0.28.3",
  "flet_permission_handler",
  "flet-open-file @ git+https://github.com/creeper19472/flet-open-file",
  "flet_model",
  "websockets",
  "pycryptodome",
  "cffi",
  "requests"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "org.crpteam"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "cfms-client"

# company name to display in about app dialogs
company = "Creeper Team"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Creeper Team"

[tool.flet.app]
path = "src"

[tool.flet.android.signing]
# store and key passwords can be passed with `--android-signing-key-store-password`
# and `--android-signing-key-password` options or
# FLET_ANDROID_SIGNING_KEY_STORE_PASSWORD
# and FLET_ANDROID_SIGNING_KEY_PASSWORD environment variables.
# key_store = "keystore.jks" # --android-signing-key-store
key_alias = "key0"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}

[tool.flet.android.permission] # --android-permissions
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.MANAGE_EXTERNAL_STORAGE" = true
"android.permission.MANAGE_MEDIA" = true
"android.permission.REQUEST_INSTALL_PACKAGES" = true